--- a/style.css
+++ b/style.css
@@ -1,75 +1,85 @@
 * {
     font-family: "Terminus (TTF)";
-    font-size: 12px;
-    min-height: 0;
+    font-size: 13px;
+    min-height: 25px;
 }
 
 window#waybar {
     background: transparent;
     color: #ffffff;
     transition-property: background-color;
-    transition-duration: .5s;
+    transition-duration: 0.5s;
 }
 #window {
-    margin: 2;
-    padding-left: 8;
-    padding-right: 8;
-    background-color: rgba(0,0,0,0.3);
-    font-size:14px;
+    font-size: 14px;
     font-weight: bold;
 }
 
 #workspaces {
-}
+    margin-top: 3px;
 
-
-
-button {
-    box-shadow: inset 0 -3px transparent;
-    border: none;
-    border-radius: 0;
-    margin: 3px;
-    padding-left: 2px;
-    padding-right: 2px;
-    border-radius: 4px;
-    background-color: rgba(0,0,0,0.7);
-    color: #ffffff;
-    border: 0.5px solid rgba(170, 43, 255, 0.9);
-}
-button:hover {
-    background: inherit;
-    border-top: 2px solid #c9545d;
-}
-
-
-#network {
-    margin: 2px;
-    padding-left: 16px;
-    padding-right: 16px;
-    border-radius: 6px;
-    background-color: rgba(0,0,0,0.7);
-    color: #ffffff;
-    border: 0.5px solid rgba(170, 43, 255, 0.9);
-}
-#cpu,
-#memory,
-#pulseaudio {
-    margin: 2px;
-    padding-left: 8px;
-    padding-right: 8px;
-    border-radius: 6px;
-    background-color: rgba(0,0,0,0.7);
-    color: #ffffff;
-    border: 0.5px solid rgba(170, 43, 255, 0.9);
-}
-#temperature {
-    margin: 2px;
     padding-left: 10px;
     padding-right: 10px;
-    border-radius: 6px;
-    background-color: rgba(0,0,0,0.7);
+
+    border-radius: 20px;
+
+    background-color: #121212;
     color: #ffffff;
-    border: 0.5px solid rgba(170, 43, 255, 0.9);
+}
+#workspaces button.active {
+    border-radius: 0px;
+    border-bottom: 1px solid #c9545d;
+}
+
+#taskbar {
+    margin-top: 3px;
+
+    padding-left: 10px;
+    padding-right: 10px;
+
+    border-radius: 20px;
+
+    background-color: #121212;
+    color: #ffffff;
+}
+#taskbar button.active {
+    border-radius: 0px;
+    border-bottom: 1px solid #c9545d;
+}
+
+.modules-right {
+    margin-top: 3px;
+
+    border-radius: 20px;
+    background-color: #121212;
+
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+#custom-clock {
+    margin-top: 3px;
+
+    padding-top: 3px;
+    padding-left: 15px;
+    padding-right: 15px;
+
+    border-radius: 20px;
+
+    background-color: #121212;
+    color: #ffffff;
+}
+
+#cpu,
+#network,
+#memory,
+#pulseaudio,
+#keyboard-state,
+#temperature {
+    margin-left: 12px;
+    margin-right: 12px;
+
+    color: #ffffff;
 }
 #network.disconnected {
     background-color: #f53c3c;
@@ -77,25 +87,3 @@ button:hover {
 #temperature.critical {
     background-color: #eb4d4b;
 }
-
-
-#custom-clock {
-    margin: 2px;
-    padding-left: 10px;
-    padding-right: 10px;
-    border-radius: 6px;
-    background-color: rgba(0,0,0,0.7);
-    color: #ffffff;
-    border: 0.5px solid rgba(170, 43, 255, 0.9);
-}
-#keyboard-state {
-    margin: 2px;
-    padding-left: 8px;
-    padding-right: 4px;
-    border-radius: 6px;
-    background-color: rgba(0,0,0,0.9);
-    color: #ffffff;
-    border: 0.5px solid rgba(170, 43, 255, 0.9);
-}
-
-
